Change log for zeit.web
=======================

PREDEPLOY
---------

- Nothing

POSTDEPLOY
----------

- Nothing


3.173 (unreleased)
------------------

- BUG-879: Image galleries - mobile tracking incomplete

- PERF: Use ES results for rendering of custom queries too


3.172 (2018-07-18)
------------------

- ZON-4778: minor styling fixes for HP Overlay A/B Test

- FIX: Remove json config from addefend


3.171 (2018-07-17)
------------------

- ZON-4346: Notice for adblocker

- ZON-4793: Enable ZMO series pages

- ZON-4778: Alternative design for A/B-Test of homepage reload dialog

- ZON-4754: Set C1 adblocker header according to article property

- FEM-81: Enable proper import of normalize.css file

- BUG-937: Bring back comment form character counter

- BUG-962: Fall back to article image if it has no teaser image

- FIX: Be defensive about comment errors on author pages

- FIX: Consider SEO in structured data for article


3.170 (2018-07-13)
------------------

- ZON-4794: De-/Activate ligatus widget by ressort switch

- BUG-961: Remove redundant subtitle in ZEIT Arbeit gallerie


3.169 (2018-07-12)
------------------

- ZON-4776: Change WM-Ticker date format

- ZON-4571: Use unpublished TMS for preview

- BUG-955: Show news agency note in AMP articles

- BUG-959: Author Feedback Form now displays author name again

- TMS-236: Increase sanity bound of items per day page,
  so sitemaps get all content published per day

- FEM-84: Load app functions dynamically on runtime

- FEM-85: Update node packages

- FIX: Serialize jinja `Undefined` to json as None

- FIX: Handle non-ascii author facebook/twitter/etc values

- MAINT: Add cached health check for elasticsearch to short-circuit requests
  when the server is already down


3.168 (2018-07-09)
------------------

- ZON-4777: Add structured data in JSON-LD format

- ZON-4744: Feed for ZON content on z2x.zeit.de

- BUG-954: Enable padding on <main> element in IE11
