@@ -19,6 +19,9 @@ POSTDEPLOY
 
 - PERF: Use ES results for rendering of custom queries too
 
+- PERF: Don't fall back to article image for ES results,
+  as accessing the body on CPs with many teasers is too expensive
+
 
 3.172 (2018-07-18)
 ------------------
